# volume-backup-sorter

./: .gitignore  LICENSE  README.md  manual.md  pyproject.toml  volume-backup-sorter-linux.spec  volume-backup-sorter-macos.spec  volume-backup-sorter-windows.spec  volume-backup-sorter.desktop  volume-backup-sorter.spec  volume-backup-sorter_v2.py
volume_backup_sorter/: __main__.py  app.py  cli.py  config.py  config_store.py  db.py  fsops.py  hashing.py  i18n.py  index_db.py  loggers.py  main_window.py  models.py  paths.py  planner.py  widgets.py  worker.py
volume_backup_sorter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
volume_backup_sorter/ui/: main_window.py  preview_dialog.py  rule_editor.py  settings_dialog.py  widgets.py
